tests/e2e/service_call_as_output3.error
Error: syntax error in story at line 1, column 21

1|    a = (uuid generate) as t
                          ^

E0152: `as` can not be used in assignments.
